--- a/app/templates/jinja/dis-comparison.jinja
+++ b/app/templates/jinja/dis-comparison.jinja
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>DIS Comparison {{data[0].eloque_id}}</title>
+    <title>DIS Comparison</title>
     <link rel="stylesheet" href="/app/static/menu.css">
     <script type="text/javascript" charset="utf8" src="/app/static/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.tables.net/v/dt/dt-1.11.3/tables.min.css"/>
@@ -53,19 +53,23 @@
 </head>
 <body>
     {% set ns = namespace(x=0, y=0) %}
-
+    {% for row in allData[0] %}
+    {% set row0 = allData[0] %}
+    {% set d0 = row0[0] %}
+    {% set row1 = allData[1] %}
+    {% set d1 = row1[0] %}
     <div style="background-color:#1A2B45; height: 75px; ">
         <a href="/app">
             <img src="/app/static/logo-new.png" style="height: 53px; padding-top: 11px; padding-left: 24px;" />
         </a>
     </div>
     <div style="margin: 10px;">
-    <h1>DIS Comparison {{data[0].eloque_id}}</h1>
+    <h1>DIS Comparison {{d0.eloque_id}}</h1>
     <h1>Asset</h1>
     <table>
-        <tr><td>Index ID</td><td>{{data[0].eloque_id}}</td></tr>
-        <tr><td>Classification</td><td>{% for c in data[0].classification %}{{c}} {% endfor %}</td></tr>
-        <tr><td>Feature Crossed</td><td>{{data[0].asset_name}}</td></tr>
+        <tr><td>Index ID</td><td>{{d0.eloque_id}}</td></tr>
+        <tr><td>Classification</td><td>{% for c in d0.classification %}{{c}} {% endfor %}</td></tr>
+        <tr><td>Feature Crossed</td><td>{{d0.asset_name}}</td></tr>
     </table>
 
     <h1>Component Types</h1>
@@ -74,7 +78,7 @@
             <tr><th>Component Type</th><th>Type</th><th>SubType</th><th>Youngs</th><th>Shear</th><th>Density</th><th>Moment</th><th>Area</th><th>Flange Width 1</th><th>Flange Width 2</th><th>Length</th><th>Height</th><th>Width</th></tr>
         </thead>
         <tbody>
-    {% for c in data[0].componentTypes %}
+    {% for c in d0.componentTypes %}
         <tr>
             <td>{{c.componentType}}</td>
             <td>{{c.structureType}}</td>
@@ -101,8 +105,8 @@
         </thead>
         <tbody>
     {% set ns.component_type = {} %}
-    {% for c in data[0].structure %}
-        {% for x in data[0].componentTypes if x.componentType == c.componentType['value'] %}{% set ns.component_type = x %}{% endfor %}
+    {% for c in d0.structure %}
+        {% for x in d0.componentTypes if x.componentType == c.componentType['value'] %}{% set ns.component_type = x %}{% endfor %}
             <tr>
                 <td>{{c.componentId}}</td>
                 <td>{{c.componentType['value']}}</td>
@@ -130,9 +134,9 @@
             <th>Design x</th><th>Design y</th><th>Built x</th><th>Built y</th>
         </tr>
     {% for f in ['F01','F02','F03','F04','F05','F06','F07','F08','F09','F10','F11','F12','F13','F14','F15'] %}
-        {% if data[0][f] %}
-        {% set fiber = data[0][f] %}
-        {% set fiber_built = data[1][f] %}
+        {% if d0[f] %}
+        {% set fiber = d0[f] %}
+        {% set fiber_built = d1[f] %}
         {% for s in fiber %}
             {% if s.sensor_type %}
             {% for x in fiber_built %}
@@ -170,7 +174,7 @@
             </tr>
         </thead>
         <tbody>
-    {% for d in data[0].deflection %}
+    {% for d in d0.deflection %}
         <tr>
             <td>{{d.id}}</td>
             <td>{{d.algorithm_type}}</td>
@@ -194,7 +198,7 @@
             </tr>
         </thead>
         <tbody>
-    {% for s in data[0].shear %}
+    {% for s in d0.shear %}
         <tr>
             <td>{{s.id}}</td>
             <td>{{s.algorithm_type}}</td>
@@ -219,7 +223,7 @@
             </tr>
         </thead>
         <tbody>
-    {% for b in data[0].bending_moment %}
+    {% for b in d0.bending_moment %}
         <tr>
             <td>{{b.id}}</td>
             <td>{{b.algorithm_type}}</td>
@@ -417,16 +421,16 @@
             let scalex = 1;
             let scaley = 1;
             let origin = 0;
-    {% for c in data[0].components %}
-            {% set jinja_template = data[0].jinja_template %}
+    {% for c in d0.components %}
+            {% set jinja_template = d0.jinja_template %}
             {% set height = c.height %}
             add_component('{{c.component_id}}', 'type', count, '{{c.length}}', '{{c.height}}');
             scalex = (9.0 / {{c.length}});
             scaley = (0.81 / {{c.height}});
-        {% for l in data[0].allFibersList %}
+        {% for l in d0.allFibersList %}
             {% set f = l["label"] %}
-            {% if data[0][f] %}
-                {% set fiber = data[0][f] %}
+            {% if d0[f] %}
+                {% set fiber = d0[f] %}
                 {% for s in fiber %}
                 {% if s.sensor_type and s.component_id ==  c.component_id %}
             origin = {{s.y}};
@@ -440,12 +444,13 @@
         {% endfor %}
             count += 1;
     {% endfor %}
-        {% for l in data[0].allFibersList %}
+        {% for l in d0.allFibersList %}
         {% set f = l["value"] %}
             draw_fiber("{{f}}");
         {% endfor %}
         }
         drawStuff();
     </script>
+    {% endfor %}
 </body>
 </html>
