--- a/app/templates/layouts/base-fullscreen.html
+++ b/app/templates/layouts/base-fullscreen.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='/app/static/bootswatch-css/{% if user_profile %}{{user_profile.data.theme}}{% else %}default{% endif%}-bootstrap.min.css'>
 
   <title>
     FormsWorking {% block title %}{% endblock %}
