--- a/app/static/menu.css
+++ b/app/static/menu.css
@@ -2,7 +2,7 @@ body {
     margin: 10;
     padding: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #444;
+    color: #fff;
   }
   /*
    * Formatting the header area
