--- a/app/templates/home/profile.html
+++ b/app/templates/home/profile.html
@@ -3,12 +3,11 @@
 {% block title %} Profile {% endblock title %}
 
 {% block stylesheets %}
+<link rel='stylesheet' href='/app/static/bootswatch-css/{% if user_profile.data %}{{user_profile.data.theme}}{% else %}default{% endif%}-bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdn.form.io/formiojs/formio.full.min.css'>
-<link rel="stylesheet" href="/app/static/menu.css">
 {% endblock stylesheets %}
 
 {% block content %}
-
 <div class="card col-12">
   <div class="card-header">
     <h4 class="mb-0">Edit profile </h4>
@@ -25,5 +24,20 @@
  window.onload = function() {
     Formio.createForm(document.getElementById('formio'), '{{ops_portal_url}}/app/formio/{{data.path}}/submission/{{data.keyvalue}}');
   };
+
+  async function submit_and_reload(form, target) {
+    $("body").css("cursor", "progress");
+    await form.submit();
+    $("body").css("cursor", "default");
+    if (target === "self") {
+      location.reload();
+    } else if (target === "close") {
+      window.close();
+    } else {
+      location.href="/app/edit/reference/report-request/" + target;
+    }
+
+  }
+
 </script>
 {% endblock javascripts %}
