--- a/app/templates/includes/navigation.html
+++ b/app/templates/includes/navigation.html
@@ -1,31 +1,28 @@
 <nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom">
-  <div>
-    <a href="/app" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+
+  <div class="col-10">
+    <a href="/app">
       <img src="/app/static/logo-new.png" style="width:200px;" alt="Flander, Beyer and Associates P/L">
     </a>
-    </div>
+  </div>
   
-  <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <!-- Navbar links -->
-      <ul class="navbar-nav align-items-center  ml-md-auto ">
-      </ul>
-      <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
+  <div class="col-2">
+
+      <ul class="navbar-nav align-items-center ml-md-0 ">
         <li class="nav-item dropdown">
-          <a class="nav-link pr-0" href="#" role="button" data-bs-toggle="collapse" data-bs-target="#account-collapse-1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link pr-0" style="float:right" href="#" role="button" data-bs-toggle="collapse" data-bs-target="#account-collapse-1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <div class="media align-items-center">
               <span class="avatar avatar-sm rounded-circle">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
                   <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
-                </svg>              </span>
-              <div class="media-body  ml-2  d-none d-lg-block">
-                <span class="mb-0 text-sm  font-weight-bold">
-                  {% if user_profile %}{{user_profile.data.firstName}}{% else %}Account{% endif%}
-                </span>
-              </div>
+                </svg>
+              </span>
+              <span class="mb-0 text-sm  font-weight-bold">
+                {% if user_profile %}{{user_profile.data.firstName}}{% else %}Account{% endif%}
+              </span>
             </div>
           </a>
-          <div class="dropdown-menu  dropdown-menu-right " id="account-collapse-1">
+          <div class="dropdown-menu" id="account-collapse-1">
             <a href="/app/profile.html" class="dropdown-item">
               <i class="bi bi-person-circle" style="font-size: 2rem"></i>
               <span>Your profile</span>
@@ -46,6 +43,7 @@
           </div>
         </li>
       </ul>
-    </div>
+
   </div>
+  
 </nav>
