--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -15,8 +15,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
   <!-- Page plugins -->
-  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
-  <link rel="stylesheet" href="/app/static/dis_menu.css">
+  <link rel='stylesheet' href='/app/static/bootswatch-css/{% if user_profile %}{{user_profile.data.theme}}{% else %}default{% endif%}-bootstrap.min.css'>
   <link rel="stylesheet" href="/app/static/popup.css">
   <link rel="stylesheet" href="/app/static/sidebars.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.11.3/datatables.min.css"/>
@@ -30,7 +29,6 @@
   {% include "includes/navigation.html" %}
 
   <main>
-
     {% include "includes/sidenav.html" %}
 
     <div class="b-example-divider"></div>
