Fix display width

--- a/app/templates/edit_reference.html
+++ b/app/templates/edit_reference.html
@@ -16,7 +16,7 @@
     </script>
       <title>{{keyvalue}} - {{desc}}</title>
   </head>
-  <body>
+  <body class="">
     <nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom d-flex justify-content-between p-3">
       <div>
         <a href="/app">
@@ -24,9 +24,9 @@
         </a>
         </div>
       <div class="text-white" style="font-size: 2rem">{{keyvalue}} - {{desc}}</div>
-  </nav>
+    </nav>
 
-  <div class="d-flex flex-column flex-shrink-0 p-3 bg-light overflow-auto" style="width:max-content">
+  <div class="d-flex flex-column flex-shrink-0 p-3 bg-light overflow-auto" style="width:100%">
     <div class="container" style="margin: 10px;">
       <div id='formio'></div>
   </div>
