--- a/app/templates/edit_submission.html
+++ b/app/templates/edit_submission.html
@@ -27,7 +27,7 @@
       <div class="text-white" style="font-size: 2rem">{{keyvalue}} - {{desc}}</div>
   </nav>
 
-  <div class="d-flex flex-column flex-shrink-0 p-3 bg-light overflow-auto" style="width:max-content">
+  <div class="d-flex flex-column flex-shrink-0 p-3 bg-light overflow-auto" style="width:100%">
     <div class="container" style="margin: 10px;">
       <div id='formio'></div>
   </div>
